--- a/app/src/main/res/layout/fragment_masuk.xml
+++ b/app/src/main/res/layout/fragment_masuk.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="30dp">
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/username_masukF"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="55dp"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/password_masukF"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="55dp"
