--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -66,7 +66,7 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:background="@drawable/tombol"
-            android:textColor="@color/ijogelapbgt"
+            android:textColor="@color/coklatilang"
             android:text="Masuk"/>
         <TextView
             android:id="@+id/atau"
