--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,36 @@
     <color name="coklattua">#692900</color>
     <color name="coklatmuda">#c09465</color>
     <color name="coklatilang">#e8d9d6</color>
+
+    <!-- Screens background color-->
+    <color name="bg_screen1">#e8d9d6</color>
+    <color name="bg_screen2">#c09465</color>
+    <color name="bg_screen3">#692900</color>
+    <color name="bg_screen4">#194546</color>
+
+    <!-- dots inactive colors -->
+    <color name="dot_dark_screen1">#FCEDEA</color>
+    <color name="dot_dark_screen2">#80C09465</color>
+    <color name="dot_dark_screen3">#80692900</color>
+    <color name="dot_dark_screen4">#80194546</color>
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#FDEEEB</color>
+    <color name="dot_light_screen2">#D4A879</color>
+    <color name="dot_light_screen3">#7D3D14</color>
+    <color name="dot_light_screen4">#2D595A</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+    </array>
 </resources>
