--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,11 @@
         <item name="colorControlNormal">@color/ijogelap</item>
         <item name="android:textColorHint">@color/ijogelap</item>
         <!---->
-        <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/ijogelap</item>
         <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
 
     <!--material-->
         <item name="colorPrimaryVariant">@color/colorPrimary</item>
@@ -39,5 +42,9 @@
         <item name="textAppearanceOverline">@style/TextAppearance.MaterialComponents.Overline</item>
 
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
