--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,16 +18,16 @@
     <color name="bg_screen4">#194546</color>
 
     <!-- dots inactive colors -->
-    <color name="dot_dark_screen1">#FCEDEA</color>
-    <color name="dot_dark_screen2">#80C09465</color>
-    <color name="dot_dark_screen3">#80692900</color>
-    <color name="dot_dark_screen4">#80194546</color>
+    <color name="dot_dark_screen1">#1AFCEDEA</color>
+    <color name="dot_dark_screen2">#1AFCEDEA</color>
+    <color name="dot_dark_screen3">#1AFCEDEA</color>
+    <color name="dot_dark_screen4">#1AFCEDEA</color>
 
     <!-- dots active colors -->
-    <color name="dot_light_screen1">#FDEEEB</color>
-    <color name="dot_light_screen2">#D4A879</color>
-    <color name="dot_light_screen3">#7D3D14</color>
-    <color name="dot_light_screen4">#2D595A</color>
+    <color name="dot_light_screen1">#FFFFFF</color>
+    <color name="dot_light_screen2">#FFFFFF</color>
+    <color name="dot_light_screen3">#FFFFFF</color>
+    <color name="dot_light_screen4">#FFFFFF</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
