--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,19 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Home">
+    tools:context=".Main.Home">
 
     <FrameLayout
+        android:id="@+id/home_fl_belumTitip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/coklatilang">
-        <ImageView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/buletan"
-            android:layout_marginTop="-100dp"
-            android:layout_marginEnd="-100dp"
-            android:layout_gravity="end"/>
-
+            android:textColor="@color/ijogelap"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/belum_nitip"/>
+        <Button
+            android:id="@+id/home_tb_titip"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/tombol"
+            android:textColor="@color/coklatilang"
+            android:text="Titip sekarang!"/>
+        </LinearLayout>
     </FrameLayout>
 </LinearLayout>
