--- a/app/src/main/res/layout/biodata.xml
+++ b/app/src/main/res/layout/biodata.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Main.Biodata"
-    android:background="@color/coklatilang">
+    android:background="@color/coklatilang"
+    android:fitsSystemWindows="true">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/biodata_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/help"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,16 +22,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="30dp"
-        android:paddingBottom="50dp">
+        android:paddingBottom="50dp"
+        android:fitsSystemWindows="true">
 
-    <com.google.android.material.textfield.TextInputLayout
+
+        <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinput1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <EditText
             android:id="@+id/biodata_namalengkap"
             android:layout_width="match_parent"
@@ -30,39 +45,54 @@
             android:hint="Nama lengkap sesuai KTP"
             android:textColor="@color/ijogelap"
             android:inputType="textEmailAddress"
-            android:ems="10"/>
+            android:ems="15"/>
+        </LinearLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textinput2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/biodata_nomorhp"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="Nomor hp (wa/telp)"
+                android:textColor="@color/ijogelap"
+                android:inputType="number"
+                android:ems="15"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <EditText
                 android:id="@+id/biodata_alamatasli"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:hint="Alamat asli"
+                android:hint="Alamat sesuai KTP"
                 android:textColor="@color/ijogelap"
                 android:inputType="textPostalAddress"
-                android:ems="10"/>
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textinput3"
+                android:ems="15"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
+            android:orientation="horizontal">
             <EditText
                 android:id="@+id/biodata_alamatkos"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:hint="Alamat kos/kontrakan"
+                android:hint="Alamat penjemputan barang"
                 android:textColor="@color/ijogelap"
                 android:inputType="textPostalAddress"
-                android:ems="10"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:ems="15"/>
+        </LinearLayout>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -88,6 +118,8 @@
             android:background="@drawable/tombol"
             android:textColor="@color/coklatilang"
             android:text="Kirim"/>
+
+
         <ProgressBar
             android:id="@+id/biodata_progressBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -96,8 +128,11 @@
             android:layout_marginTop="8dp"
             android:max="100"
             android:progress="0"
+            android:progressBackgroundTint="@color/ijogelap"
             android:visibility="gone" />
 
     </LinearLayout>
+
     </ScrollView>
+
 </FrameLayout>
