--- a/app/src/main/res/layout/titip.xml
+++ b/app/src/main/res/layout/titip.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.Titip">
+    tools:context=".Main.Titip"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/biodata_namalengkap"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="Nama lengkap sesuai KTP"
+            android:textColor="@color/ijogelap"
+            android:inputType="textEmailAddress"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/biodata_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/help"/>
+
+
+
+</LinearLayout>
