--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/coklatilang"
-    tools:context=".Main.Home">
-
-    <FrameLayout
-        android:id="@+id/home_cnt"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".Fragment.HomeFragment">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/ijogelap"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:text="@string/belum_nitip"/>
+    <Button
+        android:id="@+id/home_tb_titip"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tombol"
+        android:textColor="@color/coklatilang"
+        android:text="Titip sekarang!"/>
+    </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_home"
         android:layout_width="match_parent"
