--- a/app/src/main/res/layout/isilistpromo.xml
+++ b/app/src/main/res/layout/isilistpromo.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/isilist_cardview"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="250dp"
     android:layout_margin="10dp"
     android:backgroundTint="@color/coklatmuda"
     app:cardCornerRadius="10dp"
@@ -15,6 +15,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="10dp">
+        <ImageView
+            android:id="@+id/isilist_gbr"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@drawable/news"/>
     <TextView
         android:id="@+id/isilist_namapaket"
         android:layout_width="wrap_content"
