--- a/app/src/main/res/layout/recycler.xml
+++ b/app/src/main/res/layout/recycler.xml
@@ -10,7 +10,8 @@
         android:id="@+id/recycler_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:paddingBottom="50dp"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_home"
         android:layout_width="match_parent"
