--- a/app/src/main/res/drawable/kotak.xml
+++ b/app/src/main/res/drawable/kotak.xml
@@ -2,9 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/ijogelap"/>
-            <corners android:topLeftRadius="30dp"
-                android:topRightRadius="30dp"/>
+            <solid android:color="@color/baru_coklatgelap"/>
+<!--            <corners android:topLeftRadius="30dp"-->
+<!--                android:topRightRadius="30dp"-->
+<!--                android:bottomRightRadius="30dp"-->
+<!--                android:bottomLeftRadius="30dp"/>-->
         </shape>
     </item>
 </selector>
