--- a/app/src/main/res/drawable/tombol.xml
+++ b/app/src/main/res/drawable/tombol.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/ijogelapbgt"
-                android:endColor="@color/ijogelap"
+                android:startColor="@color/baru_coklatgelapbanget"
+                android:endColor="@color/baru_coklatgelap"
                 android:angle="0" />
             <corners android:radius="50dp"/>
         </shape>
@@ -12,8 +12,8 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/ijogelapbgt"
-                android:endColor="@color/ijogelap"
+                android:startColor="@color/baru_coklatgelapbanget"
+                android:endColor="@color/baru_coklatgelap"
                 android:angle="0" />
             <corners android:radius="50dp"/>
         </shape>
@@ -21,8 +21,8 @@
     <item android:state_selected="true">
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/coklattua"
-                android:endColor="@color/coklatmuda"
+                android:startColor="@color/baru_coklatterangbanget"
+                android:endColor="@color/baru_coklatagakterangbanget"
                 android:angle="0" />
             <corners android:radius="50dp"/>
         </shape>
@@ -30,8 +30,9 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-            android:startColor="@color/ijogelapbgt"
-            android:endColor="@color/ijogelap"
+            android:startColor="@color/baru_coklatgelapbanget"
+                android:centerColor="@color/baru_coklatagakgelapbanget"
+            android:endColor="@color/baru_coklatgelap"
             android:angle="0" />
             <corners android:radius="50dp"/>
         </shape>
