--- a/app/src/main/res/drawable/tombol2.xml
+++ b/app/src/main/res/drawable/tombol2.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/ijogelapbgt"
-                android:endColor="@color/ijogelap"
+                android:startColor="@color/baru_coklatgelapbanget"
+                android:endColor="@color/baru_coklatgelap"
                 android:angle="0" />
             <corners android:radius="50dp"/>
         </shape>
@@ -12,7 +12,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/ijogelapbgt"
+            <stroke android:color="@color/baru_coklatagakgelapbanget"
                 android:width="2dp"/>
             <corners android:radius="50dp"/>
         </shape>
