--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -33,7 +33,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="55dp"
                 android:hint="Nama pengguna"
-                android:textColor="@color/ijogelapbgt"
+                android:textColor="@color/tekslogindaftar"
                 android:inputType="textEmailAddress"
                 android:ems="10"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -41,7 +41,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/pas"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/ijogelapbgt"
+            app:passwordToggleTint="@color/toggletint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
@@ -51,7 +51,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="55dp"
                 android:hint="Kata sandi"
-                android:textColor="@color/ijogelapbgt"
+                android:textColor="@color/tekslogindaftar"
                 android:paddingEnd="15dp"
                 android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,7 +72,7 @@
             android:id="@+id/atau"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/ijogelapbgt"
+            android:textColor="@color/baru_coklatgelapbanget"
             android:text="Belum punya akun?"/>
         <Button
             android:id="@+id/daftar"
@@ -82,7 +82,7 @@
             android:layout_marginHorizontal="50dp"
             android:background="@drawable/tombol2"
             android:text="Daftar"
-            android:textColor="@color/ijogelap"/>
+            android:textColor="@color/baru_coklatagakgelapbanget"/>
     </LinearLayout>
 
 </FrameLayout>
