--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/coklatilang"
+    android:background="@color/baru_coklatagakterangbanget"
     android:gravity="center"
     android:fitsSystemWindows="true">
 
