--- a/app/src/main/res/layout/isilistriwayat.xml
+++ b/app/src/main/res/layout/isilistriwayat.xml
@@ -2,27 +2,28 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/isilist_cardview"
+    android:id="@+id/riwayat_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:backgroundTint="@color/baru_coklatagakterangbanget"
+    android:background="@color/baru_hitam"
     app:cardCornerRadius="10dp"
-    android:elevation="5dp">
+    android:elevation="50dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:weightSum="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:weightSum="1">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_weight=".25">
             <TextView
-                android:id="@+id/isilist_namapaket"
+                android:id="@+id/riwayat_namapaket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -30,30 +31,31 @@
                 android:textColor="@color/baru_coklatgelapbanget"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
             <TextView
-                android:id="@+id/isilist_deskripsipaket"
+                android:id="@+id/riwayat_deskripsipaket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:hint="Kasur + 20 set pakaian + sepatu + jasa service/laundry"
                 android:textColor="@color/baru_coklatagakgelapbanget"
                 android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/isilist_dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Dp : Rp. 50 000"
-                android:textColor="@color/baru_coklatgelapbanget"
-                android:textSize="17sp" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/isilist_gbr"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_weight="1"
-            android:src="@drawable/news" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight=".75">
+
+            <TextView
+                android:id="@+id/riwayat_dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rp 50000"
+                android:textColor="@color/baru_pink"/>
+        </LinearLayout>
+
     </LinearLayout>
+
 </com.google.android.material.card.MaterialCardView>
