--- a/app/src/main/res/layout/isilistpromo.xml
+++ b/app/src/main/res/layout/isilistpromo.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:weightSum="1"
         android:orientation="horizontal">
         <LinearLayout
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:hint="Kasur + 20 set pakaian + sepatu + jasa service/laundry"
+                android:hint="2 Kendaraan, 1 kasur, 1 pasang sepatu, 20 set pakaian, jasa service / laundry"
                 android:textColor="@color/baru_coklatagakgelapbanget"
                 android:textSize="16sp"/>
 
